--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "sst": "^2.38.7",
+    "aws-cdk-lib": "2.110.1",
+    "constructs": "10.3.0"
   }
 }
